[package]
name = "Voxel"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.7"
libadwaita = "0.5"
gstreamer = "0.21"
gstreamer-video = "0.21"
gstreamer-app = "0.21"
glib = "0.18"
gio = "0.18"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.18"
